Footer nav links z-index fixed

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -25,3 +25,8 @@
 	justify-content: center;
 	align-items: center;
 }
+
+.footerNavLink {
+	font-family: var(--amaticbold);
+	z-index: 101;
+}
